@@ -1,7 +1,17 @@
 2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* godmode/modules/manage_network_templates_form.php: Fixed
+	a bug with allows to create a module template without a
+	name.
+
+	Fixes: 3371381
+
+2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* include/functions_agents.php: Fixed a bug related to
 	wrong value for a foreach function.
+
+	Fixes: 3371341
 
 2011-07-28  Sergio Martin <sergio.martin@artica.es>
 
